--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<!-- Bootstrap core CSS -->
-	<link href="../css/bootstrap.min.css" rel="stylesheet">
+	<link href="./myportfolio/css/bootstrap.min.css" rel="stylesheet">
 
 	<!-- Material Design Bootstrap -->
-	<link href="../css/mdb.min.css" rel="stylesheet">
+	<link href="./myportfolio/css/mdb.min.css" rel="stylesheet">
 
 	<!-- Your custom styles (optional) -->
-	<link href="../css/style.css" rel="stylesheet">
+	<link href="./myportfolio/css/style.css" rel="stylesheet">
 
     <style>
         html,
@@ -89,7 +89,7 @@
                         <div class="col-md-12 pt-3">
                             <div class="white-text text-center pt-5" style="display:flex;">
                                 <div>
-                                 <img src="../images/myphoto.png" style="border-radius: 18px;border:5px solid gray;">
+                                 <img src="./myportfolio/images/myphoto.png" style="border-radius: 18px;border:5px solid gray;">
                                 </div>
                                 <div style="margin-left: 5%;'">
                                 <h1 class="display-2 mb-4 dark-grey-text wow fadeIn">I am <strong>Suraj Sheela</strong></h1>
@@ -549,16 +549,16 @@
     <!-- SCRIPTS -->
 
     <!-- JQuery -->
-    <script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="./myportfolio/js/jquery-3.3.1.min.js"></script>
 
     <!-- Bootstrap tooltips -->
-    <script type="text/javascript" src="../js/popper.min.js"></script>
+    <script type="text/javascript" src="./myportfolio/js/popper.min.js"></script>
 
     <!-- Bootstrap core JavaScript -->
-    <script type="text/javascript" src="../js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="./myportfolio/js/bootstrap.min.js"></script>
 
     <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="../js/mdb.min.js"></script>
+    <script type="text/javascript" src="./myportfolio/js/mdb.min.js"></script>
 
     <script>
         // initialize scrollspy
