--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
                         <li class="nav-item">
                             <a href="https://github.com/surajsheela" target="_blank class="nav-link"><i class="fa fa-github pr-1 light-green-text-2"></i></a>
                         </li>
+                        <li class="nav-item">
+                            <a href="http://orca.st.usm.edu/~ssheela/" target="_blank class="nav-link"><i class="fa fa-portfolio pr-1 light-green-text-2"></i></a>
+                        </li>
                     </ul>
                 </div>
             </div>
