--- a/index.html
+++ b/index.html
@@ -77,7 +77,10 @@
                             <a href="https://github.com/surajsheela" target="_blank class="nav-link"><i class="fa fa-github pr-1 light-green-text-2"></i></a>
                         </li>
                         <li class="nav-item">
-                            <a href="http://orca.st.usm.edu/~ssheela/" target="_blank class="nav-link"><i class="fa fa-portfolio pr-1 light-green-text-2"></i></a>
+                            <a href="https://www.linkedin.com/in/surajsheela/" target="_blank class="nav-link"><i class="fa fa-linkedin pr-1 light-green-text-2"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="http://orca.st.usm.edu/~ssheela/" target="_blank class="nav-link"><i class="fas fa-briefcase pr-1 light-green-text-2"></i></a>
                         </li>
                     </ul>
                 </div>
