Added new experience

--- a/index.html
+++ b/index.html
@@ -221,27 +221,41 @@
                                 <!--Description-->
                                 <blockquote class="blockquote bq-warning mb-4">
                                     <div class="row"> <i class="fa fa-briefcase fa-x mb-1 mr-3 ml-3 dark-grey-text" aria-hidden="true"></i>
-                                        <h5 class="font-weight-bold mb-3">Frontend Developer</h5>
+                                        <h5 class="font-weight-bold mb-3">Walmart - Senior Software Engineer</h5>
                                     </div>
-                                    <p class="font-weight-bold ml-1 dark-grey-text mb-2">March, 2018 - Present (6 months)</p>
+                                    <p class="font-weight-bold ml-1 dark-grey-text mb-2">May, 2019 - Present(9 Months)</p>
+                                    <p class="mb-0 ml-1 light-grey-text">To develop responsive web designs for Mismatch transactions in Financial Technolgy. </p>
+                                </blockquote>
+                                <blockquote class="blockquote bq-warning mb-4">
+                                    <div class="row"> <i class="fa fa-briefcase fa-x mb-1 mr-3 ml-3 dark-grey-text" aria-hidden="true"></i>
+                                        <h5 class="font-weight-bold mb-3">J.B.Hunt - Front End Engineer</h5>
+                                    </div>
+                                    <p class="font-weight-bold ml-1 dark-grey-text mb-2">Jan, 2019 - May, 2019(6 Months)</p>
+                                    <p class="mb-0 ml-1 light-grey-text">To develop responsive web designs for truck drivers safety and training and create orders for trucks application . </p>
+                                </blockquote>
+                                <blockquote class="blockquote bq-warning mb-4">
+                                    <div class="row"> <i class="fa fa-briefcase fa-x mb-1 mr-3 ml-3 dark-grey-text" aria-hidden="true"></i>
+                                        <h5 class="font-weight-bold mb-3">Apple Inc. - Frontend Developer</h5>
+                                    </div>
+                                    <p class="font-weight-bold ml-1 dark-grey-text mb-2">March, 2018 - Jan, 2018(10 Months)</p>
                                     <p class="mb-0 ml-1 light-grey-text">To develop responsive web designs for eSign application (Docu Sign). </p>
                                 </blockquote>
 
                                 <blockquote class="blockquote bq-warning mt-1 mb-4">
                                     <div class="row"> <i class="fa fa-briefcase fa-x mb-1 mr-3 ml-3 dark-grey-text" aria-hidden="true"></i>
-                                        <h5 class="font-weight-bold mb-3">Teaching Assistant</h5> </div>
+                                        <h5 class="font-weight-bold mb-3">The University of Southern Mississippi - Teaching Assistant</h5> </div>
                                     <p class="font-weight-bold ml-1 dark-grey-text mb-2">January 2017 - December 2017 (1 year, 0 Months)</p>
                                     <p class="mb-0 ml-1 light-grey-text">To teach C++ programming and web technologies for University of Southern Mississippi undergrduate students. </p>
                                 </blockquote>
                                 <blockquote class="blockquote bq-warning mt-1 mb-4">
                                     <div class="row"> <i class="fa fa-briefcase fa-x mb-1 mr-3 ml-3 dark-grey-text" aria-hidden="true"></i>
-                                        <h5 class="font-weight-bold mb-3">Drupal Developer</h5> </div>
+                                        <h5 class="font-weight-bold mb-3">The University of Southern Mississippi - Drupal Developer</h5> </div>
                                     <p class="font-weight-bold ml-1 dark-grey-text mb-2">August 2016 - December 2016 (6 Months)</p>
                                     <p class="mb-0 ml-1 light-grey-text">To develop university website for “Office of Research and Integrity”. </p>
                                 </blockquote>
                                 <blockquote class="blockquote bq-warning">
                                     <div class="row"> <i class="fa fa-briefcase fa-x mb-1 mr-3 ml-3 dark-grey-text" aria-hidden="true"></i>
-                                        <h5 class="font-weight-bold mb-3">JavaScript developer</h5> </div>
+                                        <h5 class="font-weight-bold mb-3">Tata Consultancy Services - JavaScript developer</h5> </div>
                                     <p class="font-weight-bold ml-1 dark-grey-text mb-2"><strong>August 2013 - July 2016 (3 years, 0 Month)</strong></p>
                                     <p class="mb-0 ml-1 light-grey-text">To Develop the wealth management product for Vanguard Group to customize and build advisory concepts.</p>
                                 </blockquote>
