Updated contact info

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                         </div>
 
                             <!--Description-->
-                            <p class="black-text text-uppercase font-weight-bold" align="justify">Java Script</p>
+                            <p class="black-text text-uppercase font-weight-bold" align="justify">Java Script/ TypeScript</p>
                                 <div class="md-progress">
                                     <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
@@ -292,7 +292,7 @@
                                     <div class="progress-bar" role="progressbar" style="width: 45%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
 
-                            <p class="black-text text-uppercase font-weight-bold pt-3" align="justify">Angular 4/5</p>
+                            <p class="black-text text-uppercase font-weight-bold pt-3" align="justify">Angular</p>
                                 <div class="md-progress">
                                     <div class="progress-bar" role="progressbar" style="width: 53%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
@@ -308,11 +308,11 @@
                                 <div class="md-progress">
                                     <div class="progress-bar" role="progressbar" style="width: 53%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>   
-                            <p class="black-text text-uppercase font-weight-bold pt-3" align="justify">OOPS</p>
+                            <p class="black-text text-uppercase font-weight-bold pt-3" align="justify">API</p>
                                 <div class="md-progress">
                                     <div class="progress-bar" role="progressbar" style="width: 53%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>   
-                            <p class="black-text text-uppercase font-weight-bold pt-3" align="justify">Observables and Promises</p>
+                            <p class="black-text text-uppercase font-weight-bold pt-3" align="justify">Flash</p>
                                 <div class="md-progress">
                                     <div class="progress-bar" role="progressbar" style="width: 53%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>   
@@ -320,7 +320,7 @@
                                 <div class="md-progress">
                                     <div class="progress-bar" role="progressbar" style="width: 53%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>   
-                            <p class="black-text text-uppercase font-weight-bold pt-3" align="justify">Angular Material design</p>
+                            <p class="black-text text-uppercase font-weight-bold pt-3" align="justify">Perl</p>
                                 <div class="md-progress">
                                     <div class="progress-bar" role="progressbar" style="width: 53%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div> 
@@ -529,7 +529,7 @@
                     <div class="col-md-4" style="display: flex;justify-content: center;align-items: center;margin-left: 35%;">
                         <ul class="contact-icons list-unstyled text-center">
                             <li><i class="fa fa-map-marker fa-2x"></i>
-                                <p>589 Manet ter, Sunnyvale, CA 94087, USA</p>
+                                <p>1907 SW 28th street Apt 16, Bentonville, AR 72712, USA</p>
                             </li>
                             <li><i class="fa fa-phone fa-2x"></i>
                                 <p>(682) 252-8649</p>
