--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         <div class="col-md-12 pt-3">
                             <div class="white-text text-center pt-5" style="display:flex;">
                                 <div>
-                                 <img src="./myportfolio/images/myphoto.png" style="border-radius: 18px;border:5px solid gray;">
+                                 <img src="./myportfolio/images/myphoto.JPG" style="border-radius: 18px;border:5px solid gray;">
                                 </div>
                                 <div style="margin-left: 5%;'">
                                 <h1 class="display-2 mb-4 dark-grey-text wow fadeIn">I am <strong>Suraj Sheela</strong></h1>
